# cqrlib

./: .gitignore  CMakeLists.txt  run_test.cmake
.agents/skills/cqrlib/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: cqrlib-instincts.yaml
.claude/skills/cqrlib/: SKILL.md
.codex/: AGENTS.md
